--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "assignments-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend NodeJS Mongoose pour le cours angular MBDS Madagascar 2021",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,10 +10,14 @@
   "author": "Sam Orgill",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
-    "mongoose": "^5.11.2",
+    "mongoose": "^5.12.3",
     "mongoose-aggregate-paginate-v2": "^1.0.42",
     "multer": "^1.4.2"
-  }
+  },
+  "devDependencies": {}
 }
